--- a/20191316008cuiliangkunGraduationProject/app/src/main/res/layout/activity_main.xml
+++ b/20191316008cuiliangkunGraduationProject/app/src/main/res/layout/activity_main.xml
@@ -1,56 +1,91 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".MainActivity"
     android:orientation="vertical">
+
+<RelativeLayout
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    >
 <ImageView
     android:layout_width="match_parent"
     android:layout_height="100dp"
     android:src="@drawable/i000"
-    android:layout_marginTop="0dp"></ImageView>
+    android:adjustViewBounds="true"></ImageView>
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_margin="10dp"
+        android:layout_marginTop="70dp"
+        android:layout_marginLeft="10dp"
+        android:layout_marginRight="10dp"
         android:orientation="vertical"
+
+        android:id="@+id/home_li"
         >
-       <FrameLayout
-           android:id="@+id/home_dom_or_spec"
+       <LinearLayout
            android:layout_width="match_parent"
-           android:layout_height="40dp"
-           ></FrameLayout>
+           android:layout_height="wrap_content"
+           android:orientation="horizontal">
+           <Button
+               android:id="@+id/dom"
+               android:layout_width="0dp"
+               android:layout_height="match_parent"
+               android:layout_weight="1"
+               android:text="国内·港澳台·海外"
+               android:background="#B3000000"
+               android:textColor="#fff"
+               android:textSize="20sp"
+               ></Button>
+           <Button
+               android:id="@+id/spec"
+               android:layout_width="0dp"
+               android:layout_height="match_parent"
+               android:layout_weight="1"
+               android:text="特价"
+               android:textColor="#fff"
+               android:textSize="20sp"
+               android:background="#B3000000"
+
+               ></Button>
+       </LinearLayout>
+
         <FrameLayout
             android:id="@+id/home_searchdetail"
             android:layout_width="match_parent"
-            android:layout_height="150dp"
-            ></FrameLayout>
+            android:layout_height="250dp"></FrameLayout>
     </LinearLayout>
     <ImageView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:src="@drawable/hot"
+        android:layout_marginTop="400dp"
         ></ImageView>
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
+        android:layout_marginTop="480dp"
         >
         <ListView
             android:id="@+id/home_list1"
             android:layout_width="0dp"
-            android:layout_height="match_parent"
-            android:layout_weight="1">
+            android:layout_height="1000dp"
+            android:layout_weight="1"
+            android:layout_margin="10dp">
+
 
         </ListView>
         <ListView
             android:id="@+id/home_list2"
+            android:layout_margin="10dp"
             android:layout_weight="1"
             android:layout_width="0dp"
-            android:layout_height="match_parent"></ListView>
+            android:layout_height="1000dp"></ListView>
     </LinearLayout>
+</RelativeLayout>
 
-
-</LinearLayout>
+</ScrollView>
