--- a/20191316008cuiliangkunGraduationProject/app/src/main/res/layout/home_spec_searchdetail.xml
+++ b/20191316008cuiliangkunGraduationProject/app/src/main/res/layout/home_spec_searchdetail.xml
@@ -4,14 +4,14 @@
     android:layout_height="match_parent"
     android:orientation="vertical"
     android:layout_margin="15dp"
-    android:id="@+id/home_searchdetail_Lin"
+    android:id="@+id/home_spec_searchdetail_Lin"
     >
-<EditText
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:hint="全球城市/区域/位置"
-    android:textColor="#000"
-    ></EditText>
+    <EditText
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:hint="全球城市/区域/位置"
+        android:textColor="#000"
+        ></EditText>
     <EditText
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -28,7 +28,7 @@
         android:layout_marginLeft="40dp"
         android:layout_width="300dp"
         android:layout_height="45dp"
-        android:text="查询特价房源"
+        android:text="查询特价房11源"
         android:textColor="#fff"
         android:background="#000"
         ></Button>
