--- a/20191316008cuiliangkunGraduationProject/app/src/main/res/layout/activity_main.xml
+++ b/20191316008cuiliangkunGraduationProject/app/src/main/res/layout/activity_main.xml
@@ -1,101 +1,105 @@
-<?xml version="1.0" encoding="utf-8"?>
-<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
+<LinearLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    android:orientation="vertical"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    tools:context=".MainActivity"
-    android:orientation="vertical">
+    android:layout_height="match_parent">
 
-<RelativeLayout
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    >
-<ImageView
-    android:layout_width="match_parent"
-    android:layout_height="100dp"
-    android:src="@drawable/i000"
-    android:adjustViewBounds="true"></ImageView>
-    <LinearLayout
+    <FrameLayout
+        android:id="@+id/id_content"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="70dp"
-        android:layout_marginLeft="10dp"
-        android:layout_marginRight="10dp"
-        android:orientation="vertical"
+        android:layout_height="0dp"
+        android:layout_weight="1">
+    </FrameLayout>
+    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+        android:layout_width="match_parent"
+        android:layout_height="67dp"
+        android:gravity="center"
+        android:orientation="horizontal">
 
-        android:id="@+id/home_li"
-        >
-       <LinearLayout
-           android:layout_width="match_parent"
-           android:layout_height="wrap_content"
-           android:orientation="horizontal">
-           <Button
-               android:id="@+id/btn_home_dom"
-               android:layout_width="0dp"
-               android:layout_height="match_parent"
-               android:layout_weight="1"
-               android:text="国内·港澳台·海外"
-               android:background="#B3000000"
-               android:textColor="#fff"
-               android:textSize="20sp"
-               ></Button>
-           <Button
-               android:id="@+id/btn_home_spec"
-               android:layout_width="0dp"
-               android:layout_height="match_parent"
-               android:layout_weight="1"
-               android:text="特价"
-               android:textColor="#fff"
-               android:textSize="20sp"
-               android:background="#B3000000"
-
-               ></Button>
-       </LinearLayout>
-
-        <RelativeLayout
-            android:layout_width="match_parent"
+        <LinearLayout
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
-            >
-            <FrameLayout
-                android:id="@+id/home_searchdetail"
-                android:layout_width="match_parent"
-                android:layout_height="250dp"></FrameLayout>
-            <FrameLayout
-                android:id="@+id/home_spec_searchdetail"
-                android:layout_width="match_parent"
-                android:layout_height="250dp"></FrameLayout>
-        </RelativeLayout>
+            android:layout_weight="1"
+            android:id="@+id/id_tab1"
+            android:gravity="center"
+            android:orientation="vertical">
+
+            <ImageButton
+                android:id="@+id/id_tab_img1"
+                android:clickable="false"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:src="@mipmap/home"
+                android:background="#00000000"/>
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textColor="#A6A6A6"
+                android:text="首页"/>
+        </LinearLayout>
+        <LinearLayout
+            android:id="@+id/id_tab2"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:gravity="center"
+            android:orientation="vertical">
+
+            <ImageButton
+                android:id="@+id/id_tab_img2"
+                android:clickable="false"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:src="@mipmap/favorite"
+                android:background="#00000000"/>
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textColor="#A6A6A6"
+                android:text="收藏"/>
+        </LinearLayout>
+        <LinearLayout
+            android:id="@+id/id_tab3"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:gravity="center"
+            android:orientation="vertical">
+
+            <ImageButton
+                android:id="@+id/id_tab_img3"
+                android:clickable="false"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:src="@mipmap/comment"
+                android:background="#00000000"/>
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textColor="#A6A6A6"
+                android:text="消息"/>
+        </LinearLayout>
+        <LinearLayout
+            android:id="@+id/id_tab4"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:gravity="center"
+            android:orientation="vertical">
+
+            <ImageButton
+                android:id="@+id/id_tab_img4"
+                android:clickable="false"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:src="@mipmap/user"
+                android:background="#00000000"/>
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textColor="#A6A6A6"
+                android:text="我的"/>
+        </LinearLayout>
 
     </LinearLayout>
-    <ImageView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:src="@drawable/hot"
-        android:layout_marginTop="400dp"
-        ></ImageView>
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        android:layout_marginTop="480dp"
-        >
-        <ListView
-            android:id="@+id/home_list1"
-            android:layout_width="0dp"
-            android:layout_height="1000dp"
-            android:layout_weight="1"
-            android:layout_margin="10dp">
-
-
-        </ListView>
-        <ListView
-            android:id="@+id/home_list2"
-            android:layout_margin="10dp"
-            android:layout_weight="1"
-            android:layout_width="0dp"
-            android:layout_height="1000dp"></ListView>
-    </LinearLayout>
-</RelativeLayout>
-
-</ScrollView>
+</LinearLayout>
