--- a/20191316008cuiliangkunGraduationProject/app/src/main/res/layout/home_listitem.xml
+++ b/20191316008cuiliangkunGraduationProject/app/src/main/res/layout/home_listitem.xml
@@ -3,7 +3,8 @@
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:orientation="vertical"
-    android:layout_margin="5dp">
+    android:layout_margin="5dp"
+    android:background="#fff">
 
     <ImageView
         android:id="@+id/home_list_itemicon"
