--- a/20191316008cuiliangkunGraduationProject/app/src/main/res/layout/homepage.xml
+++ b/20191316008cuiliangkunGraduationProject/app/src/main/res/layout/homepage.xml
@@ -5,7 +5,8 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".MainActivity"
-    android:orientation="vertical">
+    android:orientation="vertical"
+    android:background="#F5F5F5">
 
     <RelativeLayout
         android:layout_width="match_parent"
@@ -24,6 +25,7 @@
             android:layout_marginRight="10dp"
             android:orientation="vertical"
             android:id="@+id/home_li"
+            android:background="#fff"
             >
             <LinearLayout
                 android:layout_width="match_parent"
