--- a/20191316008cuiliangkunGraduationProject/app/src/main/res/layout/homepage.xml
+++ b/20191316008cuiliangkunGraduationProject/app/src/main/res/layout/homepage.xml
@@ -61,11 +61,11 @@
                 <FrameLayout
                     android:id="@+id/home_searchdetail"
                     android:layout_width="match_parent"
-                    android:layout_height="250dp"></FrameLayout>
+                    android:layout_height="wrap_content"></FrameLayout>
                 <FrameLayout
                     android:id="@+id/home_spec_searchdetail"
                     android:layout_width="match_parent"
-                    android:layout_height="250dp"></FrameLayout>
+                    android:layout_height="wrap_content"></FrameLayout>
             </RelativeLayout>
 
         </LinearLayout>
