--- a/20191316008cuiliangkunGraduationProject/app/src/main/res/layout/activity_homepage.xml
+++ b/20191316008cuiliangkunGraduationProject/app/src/main/res/layout/activity_homepage.xml
@@ -37,7 +37,7 @@
                     android:layout_height="match_parent"
                     android:layout_weight="1"
                     android:text="国内·港澳台·海外"
-                    android:background="#B3000000"
+                    android:background="#1E90FF"
                     android:textColor="#fff"
                     android:textSize="20sp"
                     ></Button>
@@ -49,7 +49,7 @@
                     android:text="特价"
                     android:textColor="#fff"
                     android:textSize="20sp"
-                    android:background="#B3000000"
+                    android:background="#1E90FF"
 
                     ></Button>
             </LinearLayout>
