--- a/20191316008cuiliangkunGraduationProject/app/src/main/res/layout/activity_userpage.xml
+++ b/20191316008cuiliangkunGraduationProject/app/src/main/res/layout/activity_userpage.xml
@@ -1,9 +1,118 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".userpage">
+    android:orientation="vertical"
+    >
+    <RelativeLayout
+        android:id="@+id/login"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="#1E90FF"
+        >
+        <Button
+            android:id="@+id/loginbtn"
+            android:layout_width="match_parent"
+            android:layout_height="250dp"
+            android:background="#00000000">
+        </Button>
+        <ImageView
+            android:id="@+id/userpage_avatar"
+            android:layout_width="100dp"
+            android:layout_height="100dp"
+            android:layout_marginLeft="20dp"
+            android:layout_marginTop="40dp"
+            android:src="@drawable/head"
+            >
+        </ImageView>
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="登录/注册"
+            android:layout_marginTop="150dp"
+            android:layout_marginLeft="20dp"
+            android:textSize="35sp"
+            android:textStyle="bold"
+            android:textColor="#fff"
+            ></TextView>
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="登录享更多特权"
+            android:layout_marginTop="200dp"
+            android:layout_marginLeft="20dp"
+            android:textSize="20sp"
+            android:textStyle="bold"
+            android:textColor="#fff"
+            ></TextView>
+            <ImageView
+                android:layout_width="70dp"
+                android:layout_height="70dp"
+                android:src="@drawable/arrow_right"
+                android:layout_toRightOf="@+id/userpage_avatar"
+                android:layout_marginTop="150dp"
+                android:layout_marginLeft="200dp"
+                ></ImageView>
+    </RelativeLayout>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        >
+
+        <Button
+            android:id="@+id/userpage_favorite"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="20dp"
+            android:background="#00000000"
+            android:gravity="left"
+            android:paddingTop="10dp"
+            android:text="我的收藏"
+            android:textColor="#000"
+            android:textSize="20sp"
+            android:textStyle="bold"></Button>
+
+    </LinearLayout>
+
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="2dp"
+        android:background="#DCDCDC"
+        >
+
+    </View>
+    <Button
+        android:id="@+id/userpage_info"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="常用信息"
+        android:textSize="20sp"
+        android:textColor="#000"
+        android:textStyle="bold"
+        android:background="#00000000"
+        android:paddingTop="10dp"
+        android:layout_marginLeft="20dp"
+        android:gravity="left"
+        ></Button>
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text=""
+        ></TextView>
+    <Button
+        android:id="@+id/userpage_wantbeowner"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="我想当房东赚钱"
+        android:layout_gravity="center_horizontal"
+        android:paddingTop="15dp"
+        android:paddingBottom="15dp"
+        android:layout_marginLeft="20dp"
+        android:layout_marginRight="20dp"
+        android:textSize="20sp"
+
+        ></Button>
+</LinearLayout>
