--- a/20191316008cuiliangkunGraduationProject/app/src/main/res/layout/hotel_item.xml
+++ b/20191316008cuiliangkunGraduationProject/app/src/main/res/layout/hotel_item.xml
@@ -6,44 +6,79 @@
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_margin="20dp"
+        android:layout_marginLeft="20dp"
+        android:layout_marginTop="20dp"
+        android:layout_marginRight="20dp"
+        android:layout_marginBottom="5dp"
         >
         <ImageView
+            android:id="@+id/searchresult_icon"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:src="@drawable/cyber"
             android:adjustViewBounds="true"
             ></ImageView>
         <ImageButton
-            android:id="@+id/hotelpage_love"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:src="@mipmap/fabulous_white"
             android:layout_marginLeft="340dp"
             android:layout_marginTop="20dp"
             android:background="#00000000"></ImageButton>
+
+    </RelativeLayout>
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="20dp"
+        android:orientation="vertical"
+        >
         <TextView
-            android:id="@+id/home_list_detail"
+            android:id="@+id/searchresult_name"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textColor="#000"
             android:text="橡宿·蔓枝·现代轻奢"
             android:textSize="20sp"
             android:textStyle="bold"
-            android:layout_margin="10dp"
+            android:layout_margin="5dp"
             ></TextView>
+
+
         <TextView
+            android:id="@+id/searchresult_des"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="整套·1居1床2人·地理位置优越"
+            android:layout_margin="5dp"
+            ></TextView>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            >
+        <TextView
+            android:id="@+id/searchresult_price"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginLeft="10dp"
             android:layout_marginBottom="10dp"
-            android:id="@+id/home_list_price"
             android:textStyle="bold"
-            android:textSize="20sp"
+            android:textSize="22sp"
             android:text="￥653"
-            android:textColor="#000"
-
+            android:textColor="#1E90FF"
             ></TextView>
-    </RelativeLayout>
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textStyle="bold"
+                android:textSize="20sp"
+                android:text="/晚"
+                android:textColor="#1E90FF"
+                ></TextView>
+
+        </LinearLayout>
+    </LinearLayout>
 
 </LinearLayout>
