--- a/20191316008cuiliangkunGraduationProject/app/src/main/res/layout/activity_homepage.xml
+++ b/20191316008cuiliangkunGraduationProject/app/src/main/res/layout/activity_homepage.xml
@@ -90,13 +90,14 @@
 
 
             </ListView>
-            <ListView
-                android:id="@+id/home_list2"
-                android:layout_margin="10dp"
-                android:layout_weight="1"
-                android:layout_width="0dp"
-                android:layout_height="1000dp"></ListView>
-        </LinearLayout>
+
+<!--            <ListView-->
+<!--                android:id="@+id/home_list2"-->
+<!--                android:layout_margin="10dp"-->
+<!--                android:layout_weight="1"-->
+<!--                android:layout_width="0dp"-->
+<!--                android:layout_height="1000dp"></ListView>-->
+</LinearLayout>
 
     </RelativeLayout>
 
