--- a/20191316008cuiliangkunGraduationProject/app/src/main/res/layout/activity_main.xml
+++ b/20191316008cuiliangkunGraduationProject/app/src/main/res/layout/activity_main.xml
@@ -78,7 +78,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:textColor="#A6A6A6"
-                android:text="收藏"/>
+                android:text="我的"/>
         </LinearLayout>
 
 
