--- a/20191316008cuiliangkunGraduationProject/app/src/main/res/layout/activity_userpage.xml
+++ b/20191316008cuiliangkunGraduationProject/app/src/main/res/layout/activity_userpage.xml
@@ -27,6 +27,7 @@
         </ImageView>
 
         <TextView
+            android:id="@+id/userpage_logintxt"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="登录/注册"
@@ -37,6 +38,7 @@
             android:textColor="#fff"
             ></TextView>
         <TextView
+            android:id="@+id/userpage_logintxt2"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="登录享更多特权"
