--- a/20191316008cuiliangkunGraduationProject/app/src/main/res/layout/activity_userpage.xml
+++ b/20191316008cuiliangkunGraduationProject/app/src/main/res/layout/activity_userpage.xml
@@ -49,6 +49,7 @@
             android:textColor="#fff"
             ></TextView>
             <ImageView
+                android:id="@+id/userpage_arrow"
                 android:layout_width="70dp"
                 android:layout_height="70dp"
                 android:src="@drawable/arrow_right"
@@ -99,6 +100,7 @@
         android:layout_marginLeft="20dp"
         android:gravity="left"
         ></Button>
+
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -114,7 +116,31 @@
         android:paddingBottom="15dp"
         android:layout_marginLeft="20dp"
         android:layout_marginRight="20dp"
+
         android:textSize="20sp"
 
         ></Button>
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_weight="1"
+        android:layout_gravity="bottom"
+        android:layout_marginBottom="0dp">
+        <Button
+            android:id="@+id/userpage_logout"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_weight="0"
+            android:text="退出登录"
+            android:textSize="20sp"
+            android:textColor="#ffffff"
+            android:textStyle="bold"
+            android:background="#DC143C"
+            android:paddingTop="10dp"
+            android:layout_gravity="bottom"
+            android:visibility="invisible"
+            android:gravity="center"
+            ></Button>
+    </LinearLayout>
+
 </LinearLayout>
