--- a/20191316008cuiliangkunGraduationProject/app/src/main/res/layout/activity_wbo.xml
+++ b/20191316008cuiliangkunGraduationProject/app/src/main/res/layout/activity_wbo.xml
@@ -26,19 +26,7 @@
         android:textSize="25sp"
         android:layout_weight="3"
         ></TextView>
-    <Button
-        android:id="@+id/homeinfo_submit"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:text="提交>"
-        android:textColor="#ffffff"
-        android:background="#1E90FF"
-        android:textStyle="bold"
-        android:textSize="25sp"
-        android:gravity="center_horizontal"
-        android:padding="10dp"
-        android:layout_weight="1"
-        ></Button>
+
 
 </LinearLayout>
 
@@ -562,7 +550,7 @@
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_marginBottom="100dp"
+                    android:layout_marginBottom="10dp"
                     android:orientation="horizontal"
                     android:padding="10dp">
 
@@ -581,7 +569,22 @@
                         android:text="养生spa"></CheckBox>
                 </LinearLayout>
             </LinearLayout>
+            <Button
+                android:id="@+id/homeinfo_submit"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="提交"
+                android:textColor="#ffffff"
+                android:background="#1E90FF"
+                android:textStyle="bold"
+                android:textSize="25sp"
+                android:gravity="center_horizontal"
+                android:padding="10dp"
+                android:layout_weight="1"
+                android:layout_marginBottom="15dp"
+                ></Button>
         </LinearLayout>
+
     </ScrollView>
 
 </LinearLayout>
