--- a/20191316008cuiliangkunGraduationProject/app/src/main/res/layout/activity_wbo.xml
+++ b/20191316008cuiliangkunGraduationProject/app/src/main/res/layout/activity_wbo.xml
@@ -55,7 +55,7 @@
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:background="#1E90FF"
+                android:background="#ffffff"
                 android:orientation="horizontal"
                 android:padding="10dp">
 
@@ -64,23 +64,110 @@
                     android:layout_height="match_parent"
                     android:layout_weight="1"
                     android:maxLines="1"
-                    android:text="地址:"
-                    android:textColor="#ffffff"
+                    android:text="民宿名:"
+                    android:textColor="#000000"
                     android:textSize="20sp"
                     android:textStyle="bold"></TextView>
 
-                <TextView
-                    android:id="@+id/home_address"
+                <EditText
+                    android:id="@+id/home_name"
                     android:layout_width="0dp"
                     android:layout_height="match_parent"
                     android:layout_gravity="right"
                     android:layout_weight="3"
                     android:gravity="right"
                     android:maxLines="1"
-                    android:text="123"
-                    android:textColor="#ffffff"
+                    android:text=""
+                    android:textColor="#000000"
+                    android:textSize="20sp"
+                    android:textStyle="bold"></EditText>
+            </LinearLayout>
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:background="#ffffff"
+                android:orientation="horizontal"
+                android:padding="10dp">
+
+                <TextView
+                    android:layout_width="0dp"
+                    android:layout_height="match_parent"
+                    android:layout_weight="2"
+                    android:maxLines="1"
+                    android:text="地址:"
+                    android:textColor="#000000"
+                    android:textSize="20sp"
+                    android:gravity="center_vertical"
+                    android:textStyle="bold"></TextView>
+
+                <TextView
+                    android:id="@+id/tvResult"
+                    android:layout_width="0dp"
+                    android:layout_height="match_parent"
+                    android:layout_weight="2"
+                    android:gravity="center"
+                    android:textSize="18sp"
+                    android:textStyle="bold"
+                    android:textColor="#000000"
+                    />
+                <Spinner
+                    android:id="@+id/spinner1"
+                    android:layout_width="0dp"
+                    android:layout_height="match_parent"
+                    android:layout_weight="1"/>
+
+                <EditText
+                    android:id="@+id/home_address"
+                    android:layout_width="0dp"
+                    android:layout_height="match_parent"
+                    android:layout_gravity="right"
+                    android:layout_weight="3"
+                    android:gravity="right"
+                    android:minLines="2"
+                    android:text=""
+                    android:textColor="#000000"
+                    android:textSize="20sp"
+                    android:textStyle="bold"></EditText>
+            </LinearLayout>
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:background="#ffffff"
+                android:orientation="horizontal"
+                android:padding="10dp">
+
+                <TextView
+                    android:layout_width="0dp"
+                    android:layout_height="match_parent"
+                    android:layout_weight="1"
+                    android:maxLines="1"
+                    android:text="价格:"
+                    android:textColor="#000000"
                     android:textSize="20sp"
                     android:textStyle="bold"></TextView>
+
+                <EditText
+                    android:id="@+id/home_price"
+                    android:layout_width="0dp"
+                    android:layout_height="match_parent"
+                    android:layout_gravity="right"
+                    android:layout_weight="2"
+                    android:gravity="right"
+                    android:maxLines="1"
+                    android:text=""
+                    android:textColor="#000000"
+                    android:textSize="20sp"
+                    android:textStyle="bold"></EditText>
+                <TextView
+                    android:layout_width="0dp"
+                    android:layout_height="match_parent"
+                    android:layout_weight="1"
+                    android:text="元/晚"
+                    android:gravity="center"
+                    android:textColor="#000000"
+                    android:textStyle="bold"
+                    android:textSize="20sp"
+                    ></TextView>
             </LinearLayout>
 
 
@@ -145,16 +232,18 @@
                         android:text="房源类型:"
                         android:textStyle="bold"></TextView>
 
-                    <TextView
+                    <Button
                         android:id="@+id/home_leixing"
                         android:layout_width="0dp"
-                        android:layout_height="match_parent"
-                        android:layout_gravity="right"
+                        android:layout_height="20dp"
+                        android:layout_gravity="center_vertical"
                         android:layout_weight="3"
                         android:gravity="right"
                         android:maxLines="1"
                         android:text="住宅公寓"
-                        android:textStyle="bold"></TextView>
+                        android:background="#ffffff"
+                        android:textStyle="bold"
+                        ></Button>
                 </LinearLayout>
 
                 <LinearLayout
@@ -170,17 +259,52 @@
                         android:maxLines="1"
                         android:text="房源户型:"
                         android:textStyle="bold"></TextView>
+                    <EditText
+                        android:id="@+id/shi"
+                        android:layout_width="0dp"
+                        android:layout_height="20dp"
+                        android:layout_gravity="right"
+                        android:layout_weight="0.5"
+                        android:gravity="right"
+                        android:maxLines="1"
+                        android:text="123"
+                        android:textStyle="bold"
+                        android:background="#ffffff"></EditText>
 
                     <TextView
                         android:id="@+id/home_huxing"
                         android:layout_width="0dp"
-                        android:layout_height="match_parent"
+                        android:layout_height="20dp"
                         android:layout_gravity="right"
-                        android:layout_weight="3"
+                        android:layout_weight="0.3"
                         android:gravity="right"
                         android:maxLines="1"
-                        android:text="1室1厅"
-                        android:textStyle="bold"></TextView>
+                        android:text="室"
+                        android:textStyle="bold"
+                        android:textColor="#000000"
+                        android:background="#ffffff"></TextView>
+                    <EditText
+                        android:id="@+id/ting"
+                        android:layout_width="0dp"
+                        android:layout_height="20dp"
+                        android:layout_gravity="right"
+                        android:layout_weight="0.5"
+                        android:gravity="right"
+                        android:maxLines="1"
+                        android:text="2"
+                        android:textStyle="bold"
+                        android:background="#ffffff"></EditText>
+                    <TextView
+                        android:layout_width="0dp"
+                        android:layout_height="20dp"
+                        android:layout_gravity="right"
+                        android:layout_weight="0.3"
+                        android:gravity="right"
+                        android:maxLines="1"
+                        android:text="厅"
+                        android:textStyle="bold"
+                        android:textColor="#000000"
+                        android:background="#ffffff"></TextView>
                 </LinearLayout>
 
                 <LinearLayout
@@ -197,16 +321,28 @@
                         android:text="房源面积:"
                         android:textStyle="bold"></TextView>
 
-                    <TextView
+                    <EditText
                         android:id="@+id/mianji"
                         android:layout_width="0dp"
-                        android:layout_height="match_parent"
+                        android:layout_height="20dp"
                         android:layout_gravity="right"
                         android:layout_weight="3"
                         android:gravity="right"
                         android:maxLines="1"
-                        android:text="123㎡"
-                        android:textStyle="bold"></TextView>
+                        android:text="123"
+                        android:textStyle="bold"
+                        android:background="#ffffff"></EditText>
+                    <TextView
+                        android:layout_width="0dp"
+                        android:layout_height="20dp"
+                        android:layout_gravity="right"
+                        android:layout_weight="0.3"
+                        android:gravity="right"
+                        android:maxLines="1"
+                        android:text="㎡"
+                        android:textStyle="bold"
+                        android:textColor="#000000"
+                        android:background="#ffffff"></TextView>
                 </LinearLayout>
 
                 <LinearLayout
@@ -223,16 +359,17 @@
                         android:text="装修风格:"
                         android:textStyle="bold"></TextView>
 
-                    <TextView
+                    <Button
                         android:id="@+id/home_fengge"
                         android:layout_width="0dp"
-                        android:layout_height="match_parent"
+                        android:layout_height="20dp"
                         android:layout_gravity="right"
                         android:layout_weight="3"
                         android:gravity="right"
                         android:maxLines="1"
                         android:text="北欧风"
-                        android:textStyle="bold"></TextView>
+                        android:textStyle="bold"
+                        android:background="#ffffff"></Button>
                 </LinearLayout>
             </LinearLayout>
 
