--- a/20191316008cuiliangkunGraduationProject/app/src/main/res/layout/activity_order.xml
+++ b/20191316008cuiliangkunGraduationProject/app/src/main/res/layout/activity_order.xml
@@ -5,7 +5,8 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".order"
-    android:orientation="vertical">
+    android:orientation="vertical"
+    android:background="#F5F5F5">
 
     <TextView
         android:layout_width="match_parent"
@@ -18,9 +19,20 @@
         android:textSize="25sp"
         android:background="#1E90FF"
         ></TextView>
-    <ImageView
+    <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:src="@drawable/noorder"
-        ></ImageView>
+        android:layout_height="wrap_content"
+        ><ListView
+        android:id="@+id/order_listview"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:visibility="visible"></ListView>
+        <ImageView
+            android:id="@+id/order_img"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:src="@drawable/noorder"
+            android:visibility="invisible"
+            ></ImageView></RelativeLayout>
+
 </LinearLayout>
