--- a/20191316008cuiliangkunGraduationProject/app/src/main/res/layout/activity_login.xml
+++ b/20191316008cuiliangkunGraduationProject/app/src/main/res/layout/activity_login.xml
@@ -82,6 +82,7 @@
                 android:layout_height="wrap_content"
                 android:layout_weight="3"
                 android:hint="请输入您的密码"
+                android:inputType="textPassword"
                 ></EditText>
         </LinearLayout>
     </LinearLayout>
